# RQL

./: .gitignore  Cargo.toml  README.md  fill_float_db.sh
.github/workflows/: ci.yml
src/: main.rs  rqle.pest
src/io/: mod.rs  reader.rs  util.rs  writer.rs
src/query/: mod.rs  query.rs  runner.rs
src/rqle/: mod.rs  rqle_parser.rs  shader_executor.rs
src/tests/: mod.rs  rqle_tests.rs  schema_tests.rs  test_db.py
src/types/: types.rs
