[package]
name = "rql"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lz4 = "1.28.0"
regex = "1.11.1"
prettytable = "0.10.0"
pest = "2.7.15"
pest_derive = "2.7.15"
rand = "0.8"
wgpu = "23.0.1"
log = "0.4.22"
bytemuck = "1.20.0"
flume = "0.11.1"
env_logger = "0.11.5"
wasm-bindgen-futures = "0.4.45"
pollster = "0.4.0"
meval = "0.2.0"
